2023-12-28  Daniel McRobb  <dwm@thrip.mcplex.net>

	* tagged as libDwmCredence-0.1.24

	* classes/src/DwmCredencePeer.cc: Tweak EndPointString() so we can
	still use it after stream is closed.

2023-12-19  Daniel W. McRobb  <dwm@depot.mcplex.net>

	* tagged as libDwmCredence-0.1.23

2023-12-16  Daniel McRobb  <dwm@spark.mcplex.net>

	* classes/include/DwmCredenceAuthenticator.hh,
	classes/include/DwmCredenceKeyExchanger.hh,
	classes/include/DwmCredencePeer.hh,
	classes/include/DwmCredenceUtils.hh,
	classes/src/DwmCredenceAuthenticator.cc,
	classes/src/DwmCredenceKeyExchanger.cc,
	classes/src/DwmCredencePeer.cc, classes/src/DwmCredenceUtils.cc,
	classes/tests/TestChallenge.cc, classes/tests/TestPeer.cc,
	configure, configure.ac:

	Added support for boost::asio::local::stream_protocol::socket.
	Not ideal at the moment since I duplicated the streams, but it
	works.  Requires C++20 due to libDwm now requiring it.

2023-10-27  Daniel McRobb  <dwm@spark.mcplex.net>

	* tagged as libDwmCredence-0.1.22

	* Makefile: use correct identifier when building package on macOS:
	net.mcplex.libDwmCredence

2023-10-24  Daniel McRobb  <dwm@spark.mcplex.net>

	* tagged as libDwmCredence-0.1.21

	* classes/src/DwmCredenceServerConfigParse.y:
	Type of second argument to credenceservercfg_scan_bytes() is
	different for different versions of flex. :-(  Update all of
	my hosts to at least flex 2.6.4 so I have consistent 'int'
	as second argument type.

2023-10-24  Daniel McRobb  <dwm@spark.mcplex.net>

	* tagged as libDwmCredence-0.1.20

	* Added classes/src/DwmCredenceServerConfigLex.lex and
	DwmCredenceServerConfigParse.y

2023-10-23  Daniel McRobb  <dwm@spark.mcplex.net>

	* tagged as libDwmCredence-0.1.19

	* Deal with boost moving in recent MacPorts for Sonoma, and
	slightly modernize my autoconf (the parts I am using here).

2023-08-01  Daniel McRobb  <dwm@mcplex.net>

	* tagged as libDwmCredence-0.1.18

	* Minor tweaks to improve robustness against faulty clients.
