@@ -60,6 +60,8 @@ AC_SUBST(KVMLIB)
 AC_SUBST(LIBTOOL)
 AC_SUBST(OSLIBS)
 
+DWM_REQUIRES_DWMPKG(libDwm,0.9.22)
+
 DWMDIR=`pkg-config --variable=prefix libDwm`
 DWMINCS=`pkg-config --cflags-only-I libDwm`
 DWMLIBS=`pkg-config --libs libDwm`
