@@ -1,3 +1,8 @@
+2023-12-29  Daniel McRobb  <dwm@spark.mcplex.net>
+
+	* dwm.m4, configure.ac, configure: Add and use new
+	DWM_REQUIRES_DWMPKG macro.
+
 2023-12-28  Daniel McRobb  <dwm@thrip.mcplex.net>
 
 	* tagged as libDwmCredence-0.1.24
